# rust-rest-crud-example

./: Cargo.toml  README.md
src/: main.rs
