[package]
name = "rust-rest-crud-example"
version = "0.1.0"
authors = ["thomaszub <thomas.zub@outlook.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["sqlite"] }
actix-web = "3.3.2"
mime = "0.3.0"
serde = { version = "1.0", features = ["derive"] }